<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.Pemesanan">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/etnama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukan_nama"
            android:textSize="16sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:textSize="16sp"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etperusahaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Nama_perusahaan"
            android:textSize="16sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/budget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Budget"
            android:textSize="16sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/ettimeline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Timeline"
            android:textSize="16sp"
            android:inputType="text"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etNomorHp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/masukan_nomor_hp"
                android:inputType="number"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnOpenWhatsapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="#25D366"
            android:text="@string/title_buka_whatsapp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</RelativeLayout>